--- a/band.css
+++ b/band.css
@@ -16,13 +16,22 @@ body {
 
 .header {
   background: #fff;
+  height: 60px;
+}
+
+.header .align-left-container .title-div .save-btn-container {
+    position: absolute;
+    top: 10px;
+    height: 46px;
+    font-size: 80%;
+    margin-left: 5px
 }
 
 h1 {
   color: #41292C;
   font-family: 'Covered By Your Grace', sans-serif;
   font-size: 100px;
-  line-height: 76px;
+  line-height: 32px;
   margin: 0;
   position: relative;
   text-align: center;
