--- a/band.css
+++ b/band.css
@@ -16,15 +16,16 @@ body {
 
 .header {
   background: #fff;
-  height: 60px;
+  height: 120px;
 }
 
-.header .align-left-container .title-div .save-btn-container {
+.header .align-left-container {
     position: absolute;
     top: 10px;
     height: 46px;
     font-size: 80%;
-    margin-left: 5px
+    margin-left: 5px;
+    width: 20%;
 }
 
 h1 {
