--- a/band.css
+++ b/band.css
@@ -19,7 +19,7 @@ body {
   height: 120px;
 }
 
-.dcg-icon-hamburger:before {
+.msp-icon-hamburger:before {
     content: "\e01b";
     text-shadow: 0 0 black;
     background-color: #d02f2f;
