--- a/band.css
+++ b/band.css
@@ -19,6 +19,10 @@ body {
   height: 120px;
 }
 
+.header .containers [
+  display: inline-block;
+}
+
 .msp-icon-hamburger:before {
     content: "\e01b";
     text-shadow: 0 0 black;
@@ -32,6 +36,7 @@ body {
     font-size: 80%;
     margin-left: 5px;
     width: 20%;
+	
 }
 
 h1 {
