--- a/band.css
+++ b/band.css
@@ -39,9 +39,9 @@ body {
 
 h1 {
   color: #41292C;
-  font-family: 'Covered By Your Grace', sans-serif;
+  font-family: 'Covered By Your Grace', serif;
   font-size: 100px;
-  line-height: 32px;
+  line-height: 24px;
   margin: 0;
   position: relative;
   text-align: center;
@@ -53,7 +53,7 @@ h1 {
 h2 {
   color: #E4BB97;
   font-family: 'Raleway', sans-serif;
-  font-size: 28px;
+  font-size: 20px;
   font-weight: 500;
   text-align: left;
   text-transform: uppercase;
@@ -76,7 +76,7 @@ p {
   color: #444444;
   line-height: 32px;
   font-family: 'Raleway', sans-serif;
-  font-size: 20px;
+  font-size: 14px;
   font-weight: 100;
 }
 
