--- a/band.css
+++ b/band.css
@@ -28,7 +28,7 @@ body {
 }
 
 .align-left-container .align-center-container .align-right-container{
-    display: inline-block;
+    display: inline;
 	
 }
 
