--- a/band.css
+++ b/band.css
@@ -3,8 +3,6 @@
 }
 
 body {
-	padding: 0;
-	margin: 0;
 	background: #f7f7f7;
 	/* Old browsers */
 	background: -moz-linear-gradient(45deg, #f7f7f7 0%, #EAE0D5 100%);
@@ -18,6 +16,7 @@ body {
 	background: #fff;
 	width: 100%;
 	height: auto;
+	text-align: center;
 }
 
 
