--- a/band.css
+++ b/band.css
@@ -31,8 +31,8 @@ body {
 }
 
 .align-left-container .align-center-container .align-right-container{
-    display: inline-block;
-	
+	display: inline-block;
+	width: 33%;
 }
 
 .align-left-container {
