--- a/band.css
+++ b/band.css
@@ -43,14 +43,17 @@ body {
 
 .align-left-container {
 	width: 200px;
+	position: relative;
 }
 
 .align-center-container {
 	width: 200px;
+	position: relative;
 }
 
 
-.align-right-container p, a{
+.align-right-container {
+	position: relative;
 	display: inline-block;
 	width: 200px;
 }
