--- a/band.css
+++ b/band.css
@@ -36,21 +36,36 @@ body {
 
 
 .align-left-container .align-center-container .align-right-container {
-  display: inline-block;
-  text-transform: uppercase;
+	color: #666666;
+	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
+	font-weight: 100;
+	letter-spacing: 2px;
+	margin: 20px;
+	display: inline-block;
+	text-transform: uppercase;
 }
 
 .align-left-container p{
-
+	color: #666666;
+	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
+	font-weight: 100;
+	letter-spacing: 2px;
+	margin: 20px;
+	display: inline-block;
+	text-transform: uppercase;
 }
 
 .align-center-container p{
 	color: #666666;
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-  font-weight: 100;
-  letter-spacing: 2px;
-	  margin: 20px;
+	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
+	font-weight: 100;
+	letter-spacing: 2px;
+	margin: 20px;
+	display: inline-block;
+	text-transform: uppercase;
 }
 
 
