--- a/band.css
+++ b/band.css
@@ -10,6 +10,7 @@ body {
 	background: -webkit-linear-gradient(45deg, #f7f7f7 0%, #EAE0D5 100%);
 	/* Chrome10-25,Safari5.1-6 */
 	background: linear-gradient(45deg, #f7f7f7 0%, #EAE0D5 100%);
+	text-align: center;
 	
 }
 
