--- a/band.css
+++ b/band.css
@@ -30,6 +30,12 @@ body {
 	padding: 20px;
 }
 
+.header-containers div{
+	-moz-column-width:300px;
+	-webkit-column-width:300px;
+	column-width:300px;
+}
+
 
 .msp-icon-hamburger:before {
     text-shadow: 0 0 black;
