--- a/band.css
+++ b/band.css
@@ -28,12 +28,13 @@ body {
 .header-containers {
 	position: relative;
 	padding: 20px;
-}
-
-.header-containers div{
 	-moz-column-width:300px;
 	-webkit-column-width:300px;
 	column-width:300px;
+}
+
+.header-containers div{
+	width:300px;
 }
 
 
