--- a/band.css
+++ b/band.css
@@ -16,13 +16,14 @@ body {
 
 .header {
 	background: #fff;
-  	height: auto;
+  	height: 60px;
   	text-align: center;
 	position: fixed;
 	left: 0;
 	top: 0;
   	z-index: 999;
   	width: 100%;
+	overflow: auto;
 }
 
 .header-containers {
