--- a/band.css
+++ b/band.css
@@ -10,7 +10,6 @@ body {
 	background: -webkit-linear-gradient(45deg, #f7f7f7 0%, #EAE0D5 100%);
 	/* Chrome10-25,Safari5.1-6 */
 	background: linear-gradient(45deg, #f7f7f7 0%, #EAE0D5 100%);
-	text-align: center;
 	
 }
 
@@ -27,10 +26,7 @@ body {
 .header-containers {
 	position: relative;
 	padding: 20px;
-<!--	-moz-column-width:300px;
-	-webkit-column-width:300px;
-	column-width:300px;
--->
+
 }
 
 .header-containers div{
@@ -66,7 +62,7 @@ body {
 	font-weight: 100;
 	letter-spacing: 2px;
 	margin: 20px;
-	display: inline-block;
+	display: inline;
 	text-transform: uppercase;
 }
 
