--- a/band.css
+++ b/band.css
@@ -80,11 +80,12 @@ body {
 
 .align-right-container p, a{
 	color: #666666;
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-  font-weight: 100;
-  letter-spacing: 2px;
-	  margin: 20px;
+	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
+	font-weight: 100;
+	letter-spacing: 2px;
+	margin: 20px;
+	display: inline;
 }
 
 h1 {
