--- a/band.css
+++ b/band.css
@@ -15,7 +15,6 @@ body {
 
 .header {
 	background-color: #333;
-
 	position: relative;
 	left: 0;
 	top: 0;
@@ -23,13 +22,13 @@ body {
 }
 
 .header-containers {
-	position: absolute;
-	float: left;
+	position: relative;
 	padding: 0px;
-	display: block;
+	display: inline;
 }
 
 .header-containers div{
+	float: left;
 	display: inline;
 }
 
