--- a/band.css
+++ b/band.css
@@ -45,34 +45,31 @@ body {
 }
 
 .align-center-container {
-	width: 500;
 }
 
 .align-left-container p, a{
-	color: #666666;
+	color: #fff;
 	font-family: 'Roboto', sans-serif;
-	font-size: 8px;
+	font-size: 12px;
 	font-weight: 100;
 	margin: 5px;
 	display: inline;
-	text-transform: uppercase;
 }
 
 .align-center-container p, a{
 	color: #666666;
 	font-family: 'Roboto', sans-serif;
-	font-size: 8px;
+	font-size: 12px;
 	font-weight: 100;
 	margin: 5px;
 	display: inline;
-	text-transform: uppercase;
 }
 
 
 .align-right-container p, a{
 	color: #666666;
 	font-family: 'Roboto', sans-serif;
-	font-size: 8px;
+	font-size: 12px;
 	font-weight: 100;
 	margin: 2px;
 	display: inline;
