--- a/band.css
+++ b/band.css
@@ -68,7 +68,7 @@ body {
 .align-center-container p{
 	color: #000;
 	font-family: 'Roboto', sans-serif;
-	font-size: 12px;
+	font-size: 16px;
 	font-weight: 400;
 	margin: 5px;
 	display: inline;
@@ -120,6 +120,12 @@ p {
 }
 
 a {
+}
+
+
+
+#loadcontainer #loadcodecontainer #loadmessage {
+	display: block;
 }
 
 #canvas {
