--- a/band.css
+++ b/band.css
@@ -19,7 +19,6 @@ body {
 	left: 0;
 	top: 0;
 	width: 100%;
-	display: inline;
 	height: auto;
 	list-style-type: none;
 	margin: 0;
@@ -41,7 +40,7 @@ body {
 	position: relative;
 	background-color: #fff;
 	padding: 0px;
-	display: inline;
+	display: inline-block;
 	width: 100%;
 }
 
