--- a/band.css
+++ b/band.css
@@ -31,8 +31,9 @@ body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
 	font-weight: 400;
-	line-height: 24px;
+	line-height: 20px;
 	margin: 5px;
+	text-decoration: none;
 	display: inline-block;
 }
 
