--- a/band.css
+++ b/band.css
@@ -31,8 +31,19 @@ body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
 	font-weight: 400;
-	line-height: 20px;
-	margin: 5px;
+	line-height: 24px;
+	padding: 14px 16px;
+	text-decoration: none;
+	display: inline-block;
+}
+
+.header p {
+	color: #000;
+	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 24px;
+	padding: 14px 16px;
 	text-decoration: none;
 	display: inline-block;
 }
