--- a/band.css
+++ b/band.css
@@ -26,7 +26,7 @@ body {
 	overflow: hidden;
 }
 
-.header a {
+.header div a {
 	color: #000;
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
@@ -37,7 +37,7 @@ body {
 	display: inline-block;
 }
 
-.header p {
+.header div p {
 	color: #000;
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
@@ -56,11 +56,14 @@ body {
     background-color: gray;
 }
 
+.header div p:hover {
+    background-color: green;
+}
 .align-right-container {
 	float: right;
 }
 
-h1 {
+#wrapper h1 {
   color: #41292C;
   font-family: 'Covered By Your Grace', serif;
   font-size: 48px;
@@ -73,7 +76,7 @@ h1 {
 
 /** List style **/
 
-h2 {
+#input_main h2 {
   color: #E4BB97;
   font-family: 'Raleway', sans-serif;
   font-size: 20px;
@@ -87,7 +90,7 @@ ul {
 li {
 }
 
-p {
+#input_main p {
   color: #444444;
   line-height: 24px;
   font-family: 'Raleway', sans-serif;
