--- a/band.css
+++ b/band.css
@@ -21,7 +21,7 @@ body {
 	width: 100%;
 	height: auto;
 	list-style-type: none;
-	margin: 0;
+	margin: 0px 0px;
 	padding: 0;
 	overflow: hidden;
 }
