--- a/band.css
+++ b/band.css
@@ -29,7 +29,7 @@ body {
 
 .header div a {
 	color: #000;
-	border: 1px solid #000;
+	border: 1px solid #fff;
 	border-radius: 4px;
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
@@ -42,7 +42,7 @@ body {
 
 .header div p {
 	color: #000;
-	border: 1px solid #000;
+	border: 1px solid #fff;
 	border-radius: 4px;
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
