--- a/band.css
+++ b/band.css
@@ -1,8 +1,8 @@
-
+/*
 * { 
 	border: 1px solid rgba(0, 0, 0, 0.3);
 }
-
+*/
 
 body {
 	background: #fff7ef;
@@ -13,7 +13,7 @@ body {
 	/* Chrome10-25,Safari5.1-6 */
 	background: linear-gradient(45deg, #f7f7f7 0%, #fff7ef 100%);
 }
-
+/*
 .main-container {
 	overflow: hidden;
 }
@@ -27,7 +27,7 @@ body {
 #input-main {
 	display: block;
 }
-
+*/
 .header {
 	background-color: rgba(255, 255, 255, 0.9);
 	position: relative;
@@ -151,7 +151,6 @@ a {
 #wrapper {
 	float: right;
 	position: relative;
-	display: block;
 }
 
 
