--- a/band.css
+++ b/band.css
@@ -223,6 +223,13 @@ a {
 	#canvas: display: block !important;
 }
 
+#rows input {
+    padding: 2px 4px;
+    margin: 2px 0;
+    box-sizing: border-box;
+    border: 2px solid #CCC;
+    border-radius: 4px;
+}
 
 input[type=text] {
     padding: 2px 4px;
