--- a/band.css
+++ b/band.css
@@ -14,6 +14,14 @@ body {
 	background: linear-gradient(45deg, #f7f7f7 0%, #fff7ef 100%);
 }
 
+p{
+	font-family: 'Roboto', sans-serif;
+}
+
+a {
+	font-family: 'Roboto', sans-serif;
+}
+
 .main-container {
 	overflow: hidden;
 }
@@ -47,7 +55,6 @@ body {
 	color: #000;
 	border: 1px solid #fff;
 	border-radius: 4px;
-	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 24px;
@@ -60,7 +67,6 @@ body {
 	color: #000;
 	border: 1px solid #fff;
 	border-radius: 4px;
-	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 24px;
@@ -89,6 +95,7 @@ body {
 	border: 1px solid #05A8AA;
 	color: #FFF;
 }
+
 .align-right-container {
 	float: right;
 }
@@ -96,17 +103,18 @@ body {
 #wrapper h1 {
 	font-family: 'Roboto', sans-serif;
 	color: #41292C;
-  font-size: 48px;
-  line-height: 32px;
-  margin: 0;
-  position: relative;
-  text-align: center;
-  top: 20%;
+	font-size: 48px;
+	line-height: 48px;
+	padding: 8px;
+	margin: 6px;
+	position: relative;
+	text-align: center;
+	top: 20%;
 }
 
 /** List style **/
 
-#input_main h2 {
+#input-main h2 {
   color: #E4BB97;
   font-family: 'Raleway', sans-serif;
   font-size: 20px;
@@ -120,10 +128,9 @@ ul {
 li {
 }
 
-#input_main p {
-  color: #444444;
-  line-height: 24px;
-  font-family: 'Raleway', sans-serif;
+#input-main p {
+  color: #000;
+  line-height: 18px;
   font-size: 14px;
   font-weight: 100;
 }
