--- a/band.css
+++ b/band.css
@@ -132,7 +132,7 @@ li {
   color: #000;
   line-height: 18px;
   font-size: 14px;
-  font-weight: 100;
+  font-weight: 200;
 }
 
 a {
@@ -231,17 +231,18 @@ a {
 }
 
 #rows input {
-    padding: 2px 4px;
+    padding: 4px 8px;
     margin: 2px 0;
     box-sizing: border-box;
-    border: 2px solid #CCC;
-    border-radius: 4px;
+    border: 1px solid #CCC;
+    border-radius: 3px;
+	letter-spacing: 1px;
 }
 
 input[type=text] {
-    padding: 2px 4px;
+    padding: 4px 8px;
     margin: 2px 0;
     box-sizing: border-box;
-    border: 2px solid #CCC;
+    border: 1px solid #CCC;
     border-radius: 4px;
 }
