--- a/band.css
+++ b/band.css
@@ -28,7 +28,7 @@ a {
 
 #input-container {
 	float: left;
-	width: 280px;
+	width: 25%;
 	overflow: hidden;
 }
 
@@ -106,7 +106,7 @@ a {
 	font-size: 48px;
 	line-height: 48px;
 	padding: 8px;
-	margin: 6px;
+	margin: 0px;
 	position: relative;
 	text-align: center;
 	top: 20%;
