--- a/band.css
+++ b/band.css
@@ -26,7 +26,7 @@ a {
 	overflow: hidden;
 }
 
-#input-container {
+/*#input-container {
 	background: #DDD;
 	border: 1px solid #ccc;
 	border-radius: 1px;
@@ -34,7 +34,7 @@ a {
 	float: left;
 	width: 25%;
 	max-width: 212px;
-}
+}*/
 
 
 #input-main {
@@ -264,7 +264,7 @@ input[type=text] {
 }
 
 
-.sidenav {
+.input-container {
     height: 100%;
     width: 0;
     position: fixed;
@@ -298,7 +298,7 @@ input[type=text] {
     margin-left: 50px;
 }
 
-#main {
+#wrapper {
     transition: margin-left .5s;
     padding: 16px;
 }
