--- a/band.css
+++ b/band.css
@@ -124,6 +124,8 @@ li {
 }
 
 #input-main p {
+	display: block;
+  transition: 0.3s;
   color: #000;
   line-height: 18px;
   font-size: 14px;
@@ -172,7 +174,7 @@ a {
 	line-height: 48px;
 	padding: 8px;
 	margin: 0;
-	position: relative;
+	position: static;
 	text-align: center;
 	top: 20%;
 }
@@ -267,7 +269,7 @@ input[type=text] {
 .input-container {
     height: 100%;
     width: 0;
-    position: fixed;
+    position: relative;
     z-index: 1;
     top: 0;
     left: 0;
