--- a/band.css
+++ b/band.css
@@ -24,10 +24,9 @@ a {
 
 .main-container {
 	overflow: hidden;
-	display: block;
 }
 
-/*#input-container {
+#input-container {
 	background: #DDD;
 	border: 1px solid #ccc;
 	border-radius: 1px;
@@ -35,14 +34,14 @@ a {
 	float: left;
 	width: 25%;
 	max-width: 212px;
-}*/
+}
 
 
-/*#input-main {
+#input-main {
 	display: inline-block;
 	overflow: hidden;
 	
-}*/
+}
 
 .header {
 	background-color: rgba(255, 255, 255, 0.9);
@@ -86,7 +85,9 @@ a {
 	float: left;
 }
 
-
+.canvas {
+	display: block;
+}
 
 .header div a:hover {
 	background-color: #05A8AA;
@@ -103,6 +104,7 @@ a {
 .align-right-container {
 	float: right;
 }
+
 
 
 /** List style **/
@@ -122,8 +124,6 @@ li {
 }
 
 #input-main p {
-	display: block;
-  transition: 0.3s;
   color: #000;
   line-height: 18px;
   font-size: 14px;
@@ -140,12 +140,11 @@ a {
 }
 
 .canvas {
-	position: relative;
-	display: block;
+	position: relative;	
 }
 
 #canvas {
-	position: relative;
+	position: static;
 	width: 100%;
 	background-color: white;
 	left: 0px;
@@ -162,7 +161,7 @@ a {
 
 #wrapper {
 	float: right;
-	position: static;
+	position: relative;
 	width: 75%;
 }
 
@@ -173,7 +172,7 @@ a {
 	line-height: 48px;
 	padding: 8px;
 	margin: 0;
-	position: static;
+	position: relative;
 	text-align: center;
 	top: 20%;
 }
@@ -265,10 +264,10 @@ input[type=text] {
 }
 
 
-.input-container {
+.sidenav {
     height: 100%;
     width: 0;
-    position: relative;
+    position: fixed;
     z-index: 1;
     top: 0;
     left: 0;
@@ -299,7 +298,7 @@ input[type=text] {
     margin-left: 50px;
 }
 
-#wrapper {
+#main {
     transition: margin-left .5s;
     padding: 16px;
 }
