--- a/band.css
+++ b/band.css
@@ -267,7 +267,7 @@ input[type=text] {
 .sidenav {
     height: 100%;
     width: 0;
-    position: fixed;
+    position: relative;
     z-index: 1;
     top: 0;
     left: 0;
@@ -291,7 +291,7 @@ input[type=text] {
 }
 
 .sidenav .closebtn {
-    position: absolute;
+    position: relative;
     top: 0;
     right: 25px;
     font-size: 36px;
