--- a/band.css
+++ b/band.css
@@ -8,8 +8,12 @@ body {
 	background: #fff;
 }
 
-a {
+p {
 	font-family: 'Roboto', sans-serif;
+}
+
+a {
+
 }
 
 /*menu bar style*/
@@ -91,7 +95,6 @@ a {
 }
 
 #input-container p{
-	font-family: 'Roboto', sans-serif;
 	margin: 0.25em 0em;
 }
 
@@ -115,7 +118,7 @@ a {
   color: #000;
   line-height: 18px;
   font-size: 14px;
-  font-weight: 200;
+  font-weight: 300;
 }
 
 
@@ -233,6 +236,8 @@ a {
     border: 1px solid #CCC;
     border-radius: 3px;
 	letter-spacing: 1px;
+	font-family: Roboto, sans-serif;
+	font-weight: 400;
 }
 
 input[type=text] {
