--- a/band.css
+++ b/band.css
@@ -25,10 +25,10 @@ a {
 	top: 0;
 	width: 100%;
 	height: auto;
+	min-width: 600px;
 	list-style-type: none;
 	margin: 0px 0px;
 	padding: 0;
-	overflow-x: hidden;
 	overflow-y: visible;
 	z-index: 1;
 }
@@ -98,6 +98,7 @@ a {
 
 .main-container {
 	overflow: hidden;
+	margin: 40px;
 }
 
 #input-container {
