--- a/band.css
+++ b/band.css
@@ -227,14 +227,12 @@ a {
 
 #wrapper h1 {
 	font-family: 'Roboto', sans-serif;
-	color: #41292C;
+	color: #000;
 	font-size: 48px;
-	line-height: 48px;
-	padding: 8px;
+	padding: 4px;
 	margin: 0;
 	position: relative;
 	text-align: center;
-	top: 20%;
 }
 
 
@@ -294,7 +292,7 @@ a {
 
 @media print{
 	@page {size: landscape}
-	#wrapper {width: 100%; margin-top: 0.1in;}
+	#wrapper {width: 100%; margin-top: 0in;}
 	.noprint { display: none }
 	.title { margin-bottom: 0.2in; }
 	#canvas: display: block !important;
@@ -306,7 +304,7 @@ a {
 	box-sizing: border-box;
 	border: 1px solid #CCC;
 	border-radius: 3px;
-	letter-spacing: 1px;
+	letter-spacing: .5px;
 	font-family: Roboto, sans-serif;
 	font-weight: 400;
 }
