--- a/band.css
+++ b/band.css
@@ -329,8 +329,9 @@ a {
 }
 
 #rows input {
-    padding: 4px 8px;
-    margin: 2px 0;
+	padding: 4px 8px;
+	margin: 2px 0;
+	min-width: 1.5em;
 	box-sizing: border-box;
 	border: 1px solid #CCC;
 	border-radius: 3px;
