--- a/band.css
+++ b/band.css
@@ -333,10 +333,9 @@ a {
 	max-width: 3.5em;
 }
 
-#rows input #title input {
+input#rows input#title {
 	padding: 3px 6px;
 	margin: 2px 0;
-
 	box-sizing: border-box;
 	border: 1px solid #CCC;
 	border-radius: 4px;
